<resources>
    <string name="app_name">Cryptocurrency</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="text_date">date timme</string>
    <string name="string_test">test</string>
    <string name="text_divider_line">|</string>
    <string name="coin_image">Coin Image</string>
    <string name="price">Price_$:</string>
    <string name="marketcap">MarketCap_$:</string>
    <string name="percentchange_1h">PercentChange_1h:</string>
    <string name="text_plus">+</string>
    <string name="text_dolar">$</string>
    <string name="symbol">Symbol:</string>
    <string name="name">Name:</string>
    <string name="circulating">Circulating:</string>
    <string name="total">Total:</string>
    <string name="max_supply">Max supply:</string>
    <string name="total_supply">Total supply:</string>
    <string name="cmc_rank">CMC Rank:</string>
    <string name="volume_24h">Volume 24h:</string>
    <string name="percent_change_1h">Percent change 1h:</string>
    <string name="percent_chage_24h">Percent chage 24h:</string>
    <string name="percent_change_7d">Percent change 7d:</string>
    <string name="market_cap">Market Cap:</string>
    <string name="last_update">Last update:</string>
    <string name="loading">loading...</string>
    <string name="category">Category:</string>
    <string name="id">ID:</string>
    <string name="date_added">Date added:</string>
    <string name="website">Website</string>
    <string name="home_page">Home page:</string>
    <string name="twitter">Twitter :</string>
    <string name="reddit">Reddit:</string>
    <string name="message_broard">Message broard:</string>
    <string name="explore">Explore:</string>
    <string name="not_data">API has no data !</string>
    <string name="search">Search...</string>
    <string name="enterkey">Enter keywordData !</string>
    <string name="home">Home</string>
    <string name="active_coin">Active coin</string>
    <string name="favourite">Favourite</string>
    <string name="a_month">A month</string>
    <string name="_7_days">7 days</string>
    <string name="_24_hours">24 hours</string>
    <string name="splash_screen">Splash screen</string>
    <string name="connect_to_server_fail_check_connection">Connect to server fail. Check connection!</string>
</resources>
