<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_blue_grey_900"
    android:padding="@dimen/dp_5">

    <ProgressBar
        android:id="@+id/progress_load"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_coin"
        android:layout_width="@dimen/dp_80"
        android:layout_height="@dimen/dp_80"
        android:layout_margin="@dimen/dp_10"
        android:scaleType="fitXY"
        android:src="@drawable/ic_empty"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_5"
        android:text="@string/name"
        android:textColor="@color/color_ampber_700"
        android:textSize="@dimen/sp_20"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_2"
        android:layout_marginLeft="@dimen/dp_2"
        android:layout_marginTop="@dimen/dp_5"
        android:maxLength="15"
        android:maxLines="1"
        android:scrollHorizontally="true"
        android:text="@string/loading"
        android:textColor="@color/color_ampber_700"
        android:textSize="@dimen/sp_20"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@+id/text_date_text"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_id_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id"
        android:textColor="@color/color_ampber_700"
        android:textSize="@dimen/sp_20"
        app:layout_constraintTop_toBottomOf="@id/text_name_text" />

    <TextView
        android:id="@+id/text_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_2"
        android:layout_marginLeft="@dimen/dp_2"
        android:maxLength="15"
        android:maxLines="1"
        android:scrollHorizontally="true"
        android:text="@string/loading"
        android:textColor="@color/color_ampber_700"
        android:textSize="@dimen/sp_20"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@+id/text_date_text"
        app:layout_constraintTop_toBottomOf="@id/text_name" />

    <TextView
        android:id="@+id/text_category_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category"
        android:textColor="@color/color_ampber_700"
        android:textSize="@dimen/sp_20"
        app:layout_constraintTop_toBottomOf="@id/text_id_text" />

    <TextView
        android:id="@+id/text_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_2"
        android:layout_marginLeft="@dimen/dp_2"
        android:maxLength="15"
        android:maxLines="1"
        android:scrollHorizontally="true"
        android:text="@string/loading"
        android:textColor="@color/color_ampber_700"
        android:textSize="@dimen/sp_20"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@+id/text_date_text"
        app:layout_constraintTop_toBottomOf="@id/text_id_text" />

    <TextView
        android:id="@+id/text_date_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_added"
        android:textColor="@color/color_ampber_700"
        android:textSize="@dimen/sp_20"
        app:layout_constraintTop_toBottomOf="@id/text_category_text" />

    <TextView
        android:id="@+id/text_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_2"
        android:layout_marginLeft="@dimen/dp_2"
        android:maxLength="20"
        android:scrollHorizontally="true"
        android:text="@string/loading"
        android:textColor="@color/color_ampber_700"
        android:textSize="@dimen/sp_20"
        android:textStyle="italic"
        app:layout_constraintLeft_toRightOf="@+id/text_date_text"
        app:layout_constraintTop_toBottomOf="@id/text_category" />

    <TextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_10"
        android:text="@string/website"
        android:textColor="@color/color_cyan_ancent_200"
        android:textSize="@dimen/sp_26"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_date_text" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/dp_5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_title">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/layout_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/dp_5"
                android:paddingBottom="@dimen/dp_5">

                <TextView
                    android:id="@+id/text_home_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_10"
                    android:text="@string/home_page"
                    android:textColor="@color/color_white_100"
                    android:textSize="@dimen/sp_18"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent" />

                <TextView
                    android:id="@+id/text_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_10"
                    android:maxLength="40"
                    android:maxLines="1"
                    android:textColor="@color/color_blue_400"
                    android:textSize="@dimen/sp_18"
                    android:textStyle="italic"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_home_text" />

            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/layout_twitter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/dp_5"
                android:paddingBottom="@dimen/dp_5"
                app:layout_constraintTop_toBottomOf="@+id/layout_home">

                <TextView
                    android:id="@+id/text_twitter_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_10"
                    android:text="@string/twitter"
                    android:textColor="@color/color_white_100"
                    android:textSize="@dimen/sp_18"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent" />

                <TextView
                    android:id="@+id/text_twitter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_10"
                    android:ellipsize="end"
                    android:maxLength="40"
                    android:maxLines="1"
                    android:textColor="@color/color_blue_400"
                    android:textSize="@dimen/sp_18"
                    android:textStyle="italic"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_twitter_text" />
            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/layout_reddit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/dp_5"
                android:paddingBottom="@dimen/dp_5"
                app:layout_constraintTop_toBottomOf="@+id/layout_twitter">

                <TextView
                    android:id="@+id/text_reddit_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_10"
                    android:text="@string/reddit"
                    android:textColor="@color/color_white_100"
                    android:textSize="@dimen/sp_18"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent" />

                <TextView
                    android:id="@+id/text_reddit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_10"
                    android:ellipsize="end"
                    android:maxLength="40"
                    android:maxLines="1"
                    android:textColor="@color/color_blue_400"
                    android:textSize="@dimen/sp_18"
                    android:textStyle="italic"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_reddit_text" />
            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/layout_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/dp_5"
                android:paddingBottom="@dimen/dp_5"
                app:layout_constraintTop_toBottomOf="@+id/layout_reddit">

                <TextView
                    android:id="@+id/text_message_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_10"
                    android:text="@string/message_broard"
                    android:textColor="@color/color_white_100"
                    android:textSize="@dimen/sp_18"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent" />

                <TextView
                    android:id="@+id/text_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_10"
                    android:ellipsize="end"
                    android:maxLength="40"
                    android:maxLines="1"
                    android:textColor="@color/color_blue_400"
                    android:textSize="@dimen/sp_18"
                    android:textStyle="italic"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_message_text" />
            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/layout_explore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/dp_5"
                android:paddingBottom="@dimen/dp_5"
                app:layout_constraintTop_toBottomOf="@+id/layout_message">

                <TextView
                    android:id="@+id/text_explore_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_10"
                    android:text="@string/explore"
                    android:textColor="@color/color_white_100"
                    android:textSize="@dimen/sp_18"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent" />

                <TextView
                    android:id="@+id/text_explore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_10"
                    android:ellipsize="end"
                    android:maxLength="40"
                    android:maxLines="1"
                    android:textColor="@color/color_blue_400"
                    android:textSize="@dimen/sp_18"
                    android:textStyle="italic"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_explore_text" />

            </android.support.constraint.ConstraintLayout>

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
