<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dp_2"
    android:background="@color/color_blue_grey_900"
    >
    <ImageView
        android:id="@+id/image_coin"
        android:layout_width="@dimen/dp_60"
        android:layout_height="@dimen/dp_60"
        android:layout_margin="@dimen/dp_5"
        android:contentDescription="@string/coin_image"
        android:scaleType="fitXY"
        android:src="@drawable/ic_empty"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:id="@+id/text_symbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_2"
        android:ellipsize="end"
        android:maxLength="7"
        android:maxLines="1"
        android:text="@string/string_test"
        android:textColor="@color/color_ampber_700"
        android:textSize="@dimen/sp_18"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/image_coin"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:id="@+id/text_line_divider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_5"
        android:layout_marginRight="@dimen/dp_5"
        android:text="@string/text_divider_line"
        android:textColor="@color/color_ampber_700"
        android:textSize="@dimen/sp_18"
        app:layout_constraintLeft_toRightOf="@id/text_symbol"
        app:layout_constraintRight_toLeftOf="@id/text_coin_name"
        />
    <TextView
        android:id="@+id/text_coin_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_2"
        android:ellipsize="end"
        android:maxLength="30"
        android:maxLines="1"
        android:text="@string/string_test"
        android:textColor="@color/color_ampber_700"
        android:textSize="@dimen/sp_18"
        app:layout_constraintLeft_toRightOf="@id/text_line_divider"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:id="@+id/text_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_2"
        android:ellipsize="end"
        android:maxLength="30"
        android:maxLines="1"
        android:text="@string/string_test"
        android:textColor="@color/color_ampber_700"
        android:textSize="@dimen/sp_15"
        android:textStyle="italic"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <ImageButton
        android:id="@+id/image_favorite"
        android:layout_width="@dimen/dp_30"
        android:layout_height="@dimen/dp_30"
        android:layout_margin="@dimen/dp_5"
        android:background="@android:color/transparent"
        android:contentDescription="@string/coin_image"
        android:scaleType="fitXY"
        android:src="@drawable/ic_star"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_time"
        />
    <TextView
        android:id="@+id/text_price_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_2"
        android:layout_marginStart="@dimen/dp_2"
        android:ellipsize="end"
        android:text="@string/price"
        android:textColor="@color/color_ampber_700"
        android:textSize="@dimen/sp_17"
        app:layout_constraintLeft_toRightOf="@id/image_coin"
        app:layout_constraintTop_toBottomOf="@+id/text_symbol"
        />
    <TextView
        android:id="@+id/text_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_2"
        android:layout_marginStart="@dimen/dp_2"
        android:ellipsize="end"
        android:maxLength="15"
        android:maxLines="1"
        android:text="@string/string_test"
        android:textColor="@color/color_white_100"
        android:textSize="@dimen/sp_17"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/text_price_text"
        app:layout_constraintTop_toBottomOf="@+id/text_symbol"
        />
    <TextView
        android:id="@+id/text_change_1h_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_2"
        android:layout_marginStart="@dimen/dp_2"
        android:ellipsize="end"
        android:maxLength="15"
        android:maxLines="1"
        android:text="@string/percentchange_1h"
        android:textColor="@color/color_ampber_700"
        android:textSize="@dimen/sp_15"
        app:layout_constraintLeft_toRightOf="@id/image_coin"
        app:layout_constraintTop_toBottomOf="@+id/text_price_text"
        />
    <TextView
        android:id="@+id/text_change_1h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_2"
        android:layout_marginStart="@dimen/dp_2"
        android:ellipsize="end"
        android:maxLength="15"
        android:maxLines="1"
        android:text="@string/string_test"
        android:textColor="@color/color_white_100"
        android:textSize="@dimen/sp_17"
        android:textStyle="italic"
        app:layout_constraintLeft_toRightOf="@id/text_change_1h_text"
        app:layout_constraintTop_toBottomOf="@+id/text_price_text"
        />
</android.support.constraint.ConstraintLayout>
