<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_blue_grey_900"
    >

    <ProgressBar
        android:id="@+id/progress_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <Spinner
        android:id="@+id/spinner_currency"
        android:layout_width="@dimen/dp_60"
        android:layout_height="@dimen/sp_30"
        android:layout_margin="@dimen/dp_10"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/linechart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/dp_5"
        android:background="@color/color_blue_grey_900"
        android:visibility="gone"
        app:layout_constraintHeight_percent=".65"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_currency"
        />

    <android.support.constraint.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".85"
        >

        <Button
            android:id="@+id/btn_24h"
            android:layout_width="@dimen/dp_100"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_5"
            android:background="@color/color_grey_500"
            android:text="@string/_24_hours"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <Button
            android:id="@+id/btn_7d"
            android:layout_width="@dimen/dp_100"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_5"
            android:background="@color/color_grey_500"
            android:text="@string/_7_days"
            app:layout_constraintLeft_toRightOf="@+id/btn_24h"
            app:layout_constraintTop_toTopOf="parent"
            />

        <Button
            android:id="@+id/btn_30d"
            android:layout_width="@dimen/dp_100"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_5"
            android:background="@color/color_grey_500"
            android:text="@string/a_month"
            app:layout_constraintLeft_toRightOf="@+id/btn_7d"
            app:layout_constraintTop_toTopOf="parent"
            />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
